# youtube-clip-catcher

./: .env  .gitignore  README.md  config.json  main.py  pyproject.toml  segment_downloader.py
response_logs/: clip_UgkxDgg8cyu5M4XOWe7pUHil1sqbh39ees0S_response.txt  clip_UgkxpILmBKQyheafZwH0YlVt6Z1SUAhBLnug_response.txt
