[tool.poetry]
name = "youtube-clip-info"
version = "0.1.0"
description = "A Python script to fetch and display metadata of a YouTube clip (not a full YouTube video) and download it with custom buffered start and end times."
authors = ["Alex Fazio <alessandro.fazio@me.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
google-auth-oauthlib = "^0.4.6"
google-api-python-client = "^2.47.0"
youtube-dl = "^2021.12.17"
yt-dlp = "^2024.7.9"
python-dotenv = "^0.19.2"
prompt-toolkit = "^3.0.47"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
youtube-clip-info = "main:main"